add MainActivity.kt/xml-mod_0.3 add GameActivity.kt/xml-mod_0.4 add JufajaActivity.kt/xml_0.2 add ProfilActivity.kt_0.1 add TilsAdapter.kt_mod_0.3 add JFJAdapter.kt_0.1 add Tils.kt_mod-0.4 add item_tils.xml_mod-0.4 add item_jfj.xml_0.1 add AddtileActivity.kt/xml_0.3 add Diverse-mod_a.d(*Tils=Pils_TilsAdapter.)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             android:exported="true" />
         <activity
             android:name=".JufajaActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="sensorLandscape" />
         <activity
             android:name=".GameActivity"
             android:exported="true" />
